force-app/main/default/objects/ssot__BundleProduct__dlm/fields/ssot__AllowPartialRefund__c.field-meta.xml
<CustomField>
    <fullName>ssot__AllowPartialRefund__c</fullName>
    <label>Allow Partial Refund</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AllowPartialRefund</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>