force-app/main/default/objects/ssot__BundleProduct__dlm/fields/ssot__CanUseRevenueSchedule__c.field-meta.xml
<CustomField>
    <fullName>ssot__CanUseRevenueSchedule__c</fullName>
    <label>Revenue Scheduling Enabled</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CanUseRevenueSchedule</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>