force-app/main/default/objects/ssot__BundleProduct__dlm/fields/ssot__IsCouponRedemptionAllowed__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsCouponRedemptionAllowed__c</fullName>
    <label>Is Coupon Redemption Allowed</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsCouponRedemptionAllowed</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>