force-app/main/default/objects/ssot__BundleProduct__dlm/fields/ssot__IsFoodstampPaymentAllowed__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsFoodstampPaymentAllowed__c</fullName>
    <label>Is Foodstamp Payment Allowed</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsFoodstampPaymentAllowed</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>