force-app/main/default/objects/ssot__BundleProduct__dlm/fields/ssot__MinimumAdvertisementAmountStartDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__MinimumAdvertisementAmountStartDate__c</fullName>
    <label>Minimum Advertisement Amount Start Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MinimumAdvertisementAmountStartDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>