force-app/main/default/objects/ssot__BundleProduct__dlm/fields/ssot__MinimumOrderQuantityCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__MinimumOrderQuantityCount__c</fullName>
    <label>Minimum Order Quantity Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MinimumOrderQuantityCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>