force-app/main/default/objects/ssot__BundleProduct__dlm/fields/ssot__ModelYear__c.field-meta.xml
<CustomField>
    <fullName>ssot__ModelYear__c</fullName>
    <label>Model Year</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ModelYear</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>