force-app/main/default/objects/ssot__BundleProduct__dlm/fields/ssot__QuantityUnitOfMeasureId__c.field-meta.xml
<CustomField>
    <fullName>ssot__QuantityUnitOfMeasureId__c</fullName>
    <label>Quantity Unit Of Measure</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>QuantityUnitOfMeasureId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>