force-app/main/default/objects/ssot__BundleProduct__dlm/fields/ssot__rel_1697761154789_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761154789_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BundleProduct_BrandId_map_Brand_Id_N_rel</label>
    <referenceTo>ssot__Brand__dlm</referenceTo>
    <relationshipLabel>BundleProduct_BrandId_map_Brand_Id_N_rel</relationshipLabel>
    <relationshipName>rel_1697761154789_end</relationshipName>
    <type>Lookup</type>
</CustomField>