force-app/main/default/objects/ssot__BundleProduct__dlm/fields/ssot__rel_1697761154860_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761154860_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BundleProduct_Id_map_BundleProduct_M_rel</label>
    <referenceTo>ssot__BundleProduct__dlm</referenceTo>
    <relationshipLabel>BundleProduct_Id_map_BundleProduct_M_rel</relationshipLabel>
    <relationshipName>rel_1697761154860_end</relationshipName>
    <type>Lookup</type>
</CustomField>