force-app/main/default/objects/ssot__BundleProduct__dlm/fields/ssot__rel_1697761155831_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761155831_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BundleProduct_MasterProductId_map_Go_rel</label>
    <referenceTo>ssot__GoodsProduct__dlm</referenceTo>
    <relationshipLabel>BundleProduct_MasterProductId_map_Go_rel</relationshipLabel>
    <relationshipName>rel_1697761155831_end</relationshipName>
    <type>Lookup</type>
</CustomField>