force-app/main/default/objects/ssot__BundleProduct__dlm/fields/ssot__ServiceEntitlementTemplateId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ServiceEntitlementTemplateId__c</fullName>
    <label>Service Entitlement Template</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ServiceEntitlementTemplateId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>