force-app/main/default/objects/ssot__BundleProduct__dlm/fields/ssot__StockLedgerValuationAmountCurrency__c.field-meta.xml
<CustomField>
    <fullName>ssot__StockLedgerValuationAmountCurrency__c</fullName>
    <label>Stock Ledger Valuation Amount Currency</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>StockLedgerValuationAmountCurrency</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>